# SLearn

./: .gitignore  CMakeLists.txt  README.md  setup.py  temp.txt
docs/: conf.py  index.rst  slearn.rst
docs/_build/doctrees/: environment.pickle  index.doctree  slearn.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  slearn.html
docs/_build/html/_sources/: index.rst.txt  slearn.rst.txt
docs/source/: conf.py  index.rst
linearregression.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
slearn.egg-info/: PKG-INFO  SOURCES.txt
src/: activation.cpp  linear_regression.hpp  linear_regression_bind.cpp
test/: CMakeLists.txt  CSVReader.cpp  CSVReader.hpp  OnlinelearningTests  activation_test.cpp  linear-regression-test-label.txt  linear-regression-test.csv  linear_regression_test.cpp  test_activation.cpp  test_linear_regression.cpp
